--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,8 +1,14 @@
 # syntax=docker/dockerfile:1
-FROM node:12-alpine
-RUN apk add --no-cache python2 g++ make
+# FROM node:12-alpine
+# RUN apk add --no-cache python2 g++ make
+# WORKDIR /app
+# COPY . .
+# RUN yarn install --production
+# CMD ["node", "src/index.js"]
+# EXPOSE 3000
+FROM node:18-alpine
 WORKDIR /app
-COPY . .
+COPY package.json yarn.lock ./
 RUN yarn install --production
+COPY . .
 CMD ["node", "src/index.js"]
-EXPOSE 3000
